@@ -25,13 +25,13 @@
 %\special{!/@scaleunit 1 def}
 \parskip=10pt
 \parindent=0pt
-\title{wxWindows 2.1.13: A portable C++ and Python GUI toolkit}
+\title{wxWindows 2.1.14: A portable C++ and Python GUI toolkit}
 \winhelponly{\author{by Julian Smart et al
 %\winhelponly{\\$$\image{1cm;0cm}{wxwin.wmf}$$}
 }}
 \winhelpignore{\author{Julian Smart, Robert Roebling, Vadim Zeitlin,
 Robin Dunn, et al}
-\date{February 11th 2000}
+\date{March 19th 2000}
 }
 \makeindex
 \begin{document}
